check_final_utf8.txt
cargo :     Checking tauri-
app v0.1.0 (D:\CBH\_CBH\REP
O\Live-MR-Manager\src-tauri
)
위치 줄:1 문자:1
+ cargo check -p tauri-app 
--color never 2>&1 | select
 -first 100 > che ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~
    + CategoryInfo         
     : NotSpecified: (     
   Checking ta...ager\sr   
 c-tauri):String) [], R    
emoteException
    + FullyQualifiedErrorI 
   d : NativeCommandError
 
warning: use of deprecated 
method `rodio::DeviceTrait:
:name`: Use `description()`
 for comprehensive device i
nformation including name, 
manufacturer, and device ty
pe. Use `id()` for a unique
, stable device identifier 
that persists across reboot
s and reconnections.
   --> src\lib.rs:443:29
    |
443 |         if let Ok(nam
e) = d.name() {
    |                      
       ^^^^
    |
    = note: `#[warn(depreca
ted)]` on by default

error[E0277]: the trait bou
nd `i32: From<i24>` is not 
satisfied
   --> src\vocal_remover.rs
:249:45
    |
249 | ...                  
 samples[c].push(i32::from(
s) as f32 / 8388608.0);
    |                      
                 ^^^ the tr
ait `From<i24>` is not impl
emented for `i32`
    |
    = help: the following o
ther types implement trait 
`From<T>`:
              `i32` impleme
nts `From<LogicalUnit<P>>`
              `i32` impleme
nts `From<PhysicalUnit<P>>`
              `i32` impleme
nts `From<bool>`
              `i32` impleme
nts `From<deranged::RangedI
32<MIN, MAX>>`
              `i32` impleme
nts `From<i16>`
              `i32` impleme
nts `From<i8>`
              `i32` impleme
nts `From<socket2::Domain>`
              `i32` impleme
nts `From<socket2::Protocol
>`
            and 3 others

warning: use of deprecated 
method `rodio::DeviceTrait:
:name`: Use `description()`
 for comprehensive device i
nformation including name, 
manufacturer, and device ty
pe. Use `id()` for a unique
, stable device identifier 
that persists across reboot
s and reconnections.
   --> src\audio_player.rs:
310:22
    |
310 |         Some(d) => d.
name().unwrap_or_else(|_| "
Unknown Device".to_string()
),
    |                      
^^^^

For more information about 
this error, try `rustc --ex
plain E0277`.
warning: `tauri-app` (lib) 
generated 2 warnings
error: could not compile `t
auri-app` (lib) due to 1 pr
evious error; 2 warnings em
itted
